maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: not enough arguments for method propageIndication: (x: Integer, y: Integer)Unit.
Unspecified value parameters x, y.
  propageIndication()
                   ^JediEscaper:19: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if (!aMurNord()){
               ^JediEscaper:25: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if (!aMurOuest()){
                ^